[ADD] Removed White Space, Introduced Breaks, Fixed Alignment, Renamed tab in Navbar

--- a/website/events/static/css/eventdetails.css
+++ b/website/events/static/css/eventdetails.css
@@ -45,8 +45,11 @@ body{
   width: 100%;
   max-width: 100vw;
   justify-content: center;
-  margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.pad-top{
+  margin-top: 6rem !important;
 }
 
 .about-event{
@@ -262,6 +265,16 @@ img{
   font-family: 'Prompt', sans-serif;
   color:black;
   text-transform: initial;
+}
+
+@media (max-width: 500px){
+  .poster_img .eve_img_desc .eve_descrip h1{
+    text-align: center;
+    font-size: 24px;
+    font-family: 'Prompt', sans-serif;
+    color:black;
+    text-transform: initial;
+  }
 }
 
 .title-header{
@@ -531,6 +544,7 @@ img{
   bottom: 0;
   width: 600px !important;
   height: 600px !important;
+  object-fit: fill;
 }
 
 @media screen and (max-width:1000px){
@@ -594,6 +608,7 @@ img{
   bottom: 0;
   width: 600px !important;
   height: 600px !important;
+  object-fit: fill;
 }
 
 @media screen and (max-width:1700px){
@@ -774,6 +789,7 @@ img{
   bottom: 0;
   width: 400px !important;
   height: 400px !important;
+  object-fit: fill;
 }
 
 @media screen and (max-width:1630px){
@@ -849,8 +865,8 @@ img{
     margin-left: auto;
     margin-right: auto;
     bottom: 0;
-    width: 300px !important;
-    height: 300px !important;
+    width: 325px !important;
+    height: 325px !important;
   }
 }
 
@@ -862,12 +878,12 @@ img{
     margin-left: auto;
     margin-right: auto;
     bottom: 0;
-    width: 270px !important;
-    height: 270px !important;
+    width: 300px !important;
+    height: 300px !important;
   }
 }
 
-@media screen and (max-width:860px){
+@media screen and (max-width:850px){
   .main .container .swiper-container .swiper-wrapper .swiper-slide .card-image .five-image {
     display: block;
     position: relative;
@@ -888,8 +904,8 @@ img{
     margin-left: auto;
     margin-right: auto;
     bottom: 0;
-    width: 210px !important;
-    height: 210px !important;
+    width: 230px !important;
+    height: 230px !important;
   }
 }
 
@@ -985,23 +1001,27 @@ img{
 }
 
 .swiper-button-next{
-  color: white !important;
-  background-color: var(--theme-color);
+  color: black !important;
   width: 80px !important;
   height: 80px !important;
-  border-radius: 50% !important;
   font-weight: 900;
   text-indent: 5px;
 }
 
 .swiper-button-prev{
-  color: white !important;
-  background-color: var(--theme-color);
+  color: black !important;
   width: 80px !important;
   height: 80px !important;
-  border-radius: 50% !important;
   font-weight: 900;
   text-indent: -5px;
+}
+
+.swiper-button-next:hover{
+  color: var(--theme-color) !important;
+}
+
+.swiper-button-prev:hover{
+  color: var(--theme-color) !important;
 }
 
 @media screen and (max-width:1300px){
@@ -1519,7 +1539,7 @@ timeline{
   }
   
   .section-header{
-    margin-top: 0rem;
+    margin-top: -3rem;
   }
   .timeline{
     margin-top: 10vh;
@@ -1529,6 +1549,19 @@ timeline{
     margin-top: 10vh;
   }
 }
+
+@media (min-width: 530px){
+  .section-header{
+    margin-top: -3rem;
+  }
+}
+
+@media (min-width: 200px){
+  .section-header{
+    margin-top: -1.3rem;
+  }
+}
+
 @media (min-width: 500px) 
 {
   .swiper-container{
